--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
+    "@reduxjs/toolkit": "^1.8.0",
+    "axios": "^0.26.1",
+    "bcrypt": "^5.0.1",
+    "firebase": "^8.7.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.6",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.28.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "eslint": "8.11.0",
