--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0"
   }
