--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://gerardo:nerf.143@cluster0.kurtc.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 TOKEN=SWDfjboiq12|\ote0t+kq2ke4
+CI=false
